# quicktok

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml  quicktok.pc.in
.github/ISSUE_TEMPLATE/: mismatch.md
.github/workflows/: ci.yml  wheels.yml
bench/: README.md  bench.cpp  bench.py  bench_file.cpp  compare.py  corpus.txt  fetch_corpus.py  hf_qwen_bench.py  llama4_bench.py  llamacpp_bench.cpp  tokendagger_bench.cpp
bench/comparators/: Cargo.toml
bench/comparators/src/: main.rs
cmake/: quicktokConfig.cmake.in
data/: cl100k.special  cl100k.vocab  llama3.special  llama3.vocab  o200k.special  o200k.vocab  o200k_harmony.special  qwen3.special  qwen3.vocab
docs/: cpp.md  encodings.md  python.md
docs/superpowers/specs/: 2026-06-19-readme-rewrite-design.md
examples/: hello.cpp
include/: quicktok.h  quicktok.hpp
python/quicktok/: __init__.py  _import_core.py  hf.py  import_tokenizer.py  importer.py
python/src/: _quicktok.cpp
src/: bpe.hpp  cabi.cpp  nfc.hpp  pretok.hpp  pretok_o200k.hpp  quicktok.cpp  trie2_mb.cpp
test/: fuzz_quicktok.cpp  test_cabi.c  test_quicktok.cpp
tests/: conftest.py  test_batch.py  test_hf.py  test_importer.py  test_module.py  test_offsets.py  test_parity.py
tests/consumer/: CMakeLists.txt  app.cpp
tools/: check_version.py  check_vocab_provenance.py  export_fixtures.py  export_llama3.py  export_llama4.py  export_nfc.py  export_qwen.py  export_unicode.py  export_unicode_o200k.py  gen_vectors.py  import_tokenizer.py
