[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "quicktok-v1"
version = "0.3.0"
description = "Fast exact BPE tokenizer for OpenAI and open-model encodings (cl100k, o200k, GPT-OSS, Llama-3, Qwen)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "dmatth1" }]
dependencies = ["numpy>=1.21"]
keywords = ["tokenizer", "bpe", "tiktoken", "cl100k", "o200k", "gpt", "qwen", "llama", "gpt-oss", "harmony"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/dmatth1/quicktok"

[tool.scikit-build]
# whole repo is the source; the SKBUILD-guarded block in CMakeLists builds the
# Python extension. sdist defaults to git-tracked files, so all core sources +
# data are included automatically.
cmake.source-dir = "."
wheel.packages = ["python/quicktok"]
